@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2010-06-08"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20100608
-#define RUBY_PATCHLEVEL 274
+#define RUBY_PATCHLEVEL 275
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
