@@ -1,3 +1,8 @@
+Tue Jun  8 15:27:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (search_required): expand home relative path first.
+	  [ruby-core:29610]
+
 Tue Jun  8 15:23:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/timeout.rb (Timeout#timeout): propagate errors to the
